Initial commit on ANTLR conversion